--- a/PPETracker/Views/Home/Privacy.cshtml
+++ b/PPETracker/Views/Home/Privacy.cshtml
@@ -1,6 +1,10 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="text-center">@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<div class="row">
+    <div class="col-md-6 offset-3">
+        <p>No Personally Identifiable Information (PII) is used in PPE Tracker.</p>
+    </div>
+</div>
