--- a/PPETracker/Views/Products/DeactivatedProducts.cshtml
+++ b/PPETracker/Views/Products/DeactivatedProducts.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PPETracker.ViewModels.ProductSummaryViewModel>
 
 @{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Deactivated Products";
 }
 
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
@@ -10,15 +10,9 @@
         float: left !important;
     }
 </style>
-<h1 class="text-center">Dashboard</h1>
+<h1 class="text-center">Deactivated Products</h1>
 
 <div class="container">
-    <div class="row">
-        <div class="col-sm-2">
-            <a asp-action="AddNew" class="btn btn-sm btn-success" style="margin-bottom: 20px !important;">Add New</a>
-        </div>
-    </div>
-
     <div class="row">
         <div class="col-sm-6">
             <label class="control-label">Filter by Category: </label>
@@ -30,7 +24,7 @@
 
     <div class="row">
         <div class="col-sm-12">
-            <table class="table" id="ppe-table">
+            <table class="table" id="ppe-table-deactivated">
                 <thead>
                     <tr>
                         <th>
@@ -70,12 +64,9 @@
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Quantity)
-                                <button class="btn btn-sm btn-primary" style="margin-left: 10px;" onclick="EditProductQuantity('@item.ID')">Edit</button>
                             </td>
                             <td>
-                                <button class="btn btn-sm btn-info" style="margin-left: 10px;" onclick="ViewProductDetails('@item.ID')">Details</button>
-                                @Html.ActionLink("Edit Product", "Edit", "Products", new { id = item.ID }, new { @class = "btn btn-sm btn-primary" })
-                                <button class="btn btn-sm btn-danger" onclick="DeleteProduct('@item.ID')">Delete</button>
+                                <button class="btn btn-sm btn-primary" onclick="ReactivateProduct('@item.ID')">Reactivate</button>
                             </td>
                         </tr>
                     }
@@ -85,19 +76,13 @@
     </div>
     <div class="row">
         <div class="col-sm-4">
-            <a asp-action="DeactivatedProducts" class="btn btn-sm btn-secondary" style="margin: 20px 0px;">Deactivated Products</a>
+            <a asp-action="Dashboard" class="btn btn-sm btn-secondary" style="margin: 20px 0px;">Active Products</a>
         </div>
     </div>
 </div>
 
-<!-- Product quantity modal goes here -->
-<div id="updateProdQuantity"></div>
-
-<!-- Product details modal goes here -->
-<div id="prodDetails"></div>
-
-<!--Product delete modal goes here-->
-<div id="prodDelete"></div>
+<!--Product reactivate modal goes here-->
+<div id="prodReactivate"></div>
 
 @section Scripts{
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
@@ -106,7 +91,7 @@
 
     <script type="text/javascript" charset="utf8">
         $(document).ready(function () {
-            var ppeTable = $('#ppe-table').DataTable({
+            var ppeTable = $('#ppe-table-deactivated').DataTable({
                 "order": [[1, "asc"]],
                 "dom": '<"pull-left"f>ti',
                 "paging": false
@@ -123,41 +108,18 @@
                 var selectedCat = $('#categoryDropdown').val();
                 ppeTable
                     .column(2)
-                    .search('^(' + selectedCat + ')$', true, false)
+                    .search(selectedCat)
                     .draw();
             });
         });
 
-        function EditProductQuantity(idNum) {
+        function ReactivateProduct(idNum) {
             //call controller action to get product details and return partial view
-            var url = '@Url.Action("UpdateProductQuantity", "Products")?productID=' + idNum;
-            $('#updateProdQuantity').load(url,
-                function () {
-                    $.validator.unobtrusive.parse("#updateQuantityModal");
-                    //display modal
-                    $('#updateQuantityModal').modal('show');
-                }
-            );
-        }
-
-        function ViewProductDetails(idNum) {
-            //call controller action to get product details and return partial view
-            var url = '@Url.Action("Details", "Products")?productID=' + idNum;
-            $('#prodDetails').load(url,
+            var url = '@Url.Action("Reactivate", "Products")?productID=' + idNum;
+            $('#prodReactivate').load(url,
                 function () {
                     //display modal
-                    $('#prodDetailsModal').modal('show');
-                }
-            );
-        }
-
-        function DeleteProduct(idNum) {
-            //call controller action to get product details and return partial view
-            var url = '@Url.Action("Delete", "Products")?productID=' + idNum;
-            $('#prodDelete').load(url,
-                function () {
-                    //display modal
-                    $('#productDeleteModal').modal('show');
+                    $('#productReactivateModal').modal('show');
                 }
             );
         }
