--- a/PPETracker/Views/Products/_UpdateProductQuantity.cshtml
+++ b/PPETracker/Views/Products/_UpdateProductQuantity.cshtml
@@ -154,7 +154,7 @@
                                 </dl>
                                 <div style="margin-top: 20px;">
                                     <button type="submit" class="btn btn-primary">Update Quantity</button>
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                                 </div>
                             </div>
                         </div>
