removed code from Identity views and code files; added code to hide buttons for non-admins on Dashboard view; fixed bug on dropdown

--- a/PPETracker/Views/Home/Privacy.cshtml
+++ b/PPETracker/Views/Home/Privacy.cshtml
@@ -5,6 +5,6 @@
 
 <div class="row">
     <div class="col-md-6 offset-3">
-        <p>No Personally Identifiable Information (PII) is used in PPE Tracker.</p>
+        <p>No Personally Identifiable Information (PII) is collected in PPE Tracker.</p>
     </div>
 </div>
