--- a/PPETracker/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/PPETracker/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -4,8 +4,5 @@
     ViewData["Title"] = "Forgot password confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div></div>
 
