--- a/PPETracker/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
+++ b/PPETracker/Areas/Identity/Pages/Account/Manage/DownloadPersonalData.cshtml
@@ -5,8 +5,4 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h4>@ViewData["Title"]</h4>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
+<div></div>
