--- a/PPETracker/Areas/Identity/Pages/Account/Login.cshtml
+++ b/PPETracker/Areas/Identity/Pages/Account/Login.cshtml
@@ -6,23 +6,23 @@
 }
 
 <div class="row">
-    <div class="col-md-4 offset-4">
-        <section>
-            <h1 class="text-center">@ViewData["Title"]</h1>
-            <form id="account" method="post">
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                @*<div class="form-group">
+    <div class="col-6 offset-3">
+        <!--<section>-->
+        <h1>@ViewData["Title"]</h1><br />
+        <hr />
+        <form id="account" method="post">
+            <div asp-validation-summary="All" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Input.Email"></label>
+                <input asp-for="Input.Email" class="form-control mobile-form-text" />
+                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.Password"></label>
+                <input asp-for="Input.Password" class="form-control mobile-form-text" />
+                <span asp-validation-for="Input.Password" class="text-danger"></span>
+            </div>
+            @*<div class="form-group">
                 <div class="checkbox">
                     <label asp-for="Input.RememberMe">
                         <input asp-for="Input.RememberMe" />
@@ -30,10 +30,10 @@
                     </label>
                 </div>
             </div>*@
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
-                </div>
-                @*<div class="form-group">
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Log in</button>
+            </div>
+            @*<div class="form-group">
                 <p>
                     <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
                 </p>
@@ -41,8 +41,8 @@
                     <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
                 </p>
             </div>*@
-            </form>
-        </section>
+        </form>
+        <!--</section>-->
     </div>
     @*<div class="col-md-6 col-md-offset-2">
             <section>
