--- a/PPETracker/Views/Products/AddNew.cshtml
+++ b/PPETracker/Views/Products/AddNew.cshtml
@@ -13,13 +13,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="bold-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control mobile-form-text" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Brand" class="bold-label"></label>
-                <input asp-for="Brand" class="form-control" />
+                <input asp-for="Brand" class="form-control mobile-form-text" />
                 <span asp-validation-for="Brand" class="text-danger"></span>
             </div>
 
@@ -27,7 +27,7 @@
             {
                 <div class="form-group">
                     <label asp-for="PhotoLink" class="bold-label"></label>
-                    <input asp-for="PhotoLink" class="form-control" /><br />
+                    <input asp-for="PhotoLink" class="form-control mobile-form-text" /><br />
                     <span asp-validation-for="PhotoLink" class="text-danger"></span>
                 </div>
             }
@@ -42,7 +42,7 @@
 
             <div class="form-group">
                 <label asp-for="Comments" class="bold-label"></label>
-                <textarea asp-for="Comments" class="form-control"></textarea>
+                <textarea asp-for="Comments" class="form-control mobile-form-text"></textarea>
                 <span asp-validation-for="Comments" class="text-danger"></span>
             </div>
 
@@ -83,7 +83,7 @@
                             <div id='gas-mask-associated-enter' style='display: block;'>
                                 <div class="form-group">
                                     <label asp-for="UserEnteredGasMaskAssociatedWith" class="bold-label"></label>
-                                    <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control" />
+                                    <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control mobile-form-text" />
                                     <span asp-validation-for="UserEnteredGasMaskAssociatedWith" class="text-danger" id="val-for-gas-mask-associated-enter"></span>
                                 </div>
                             </div>
@@ -93,7 +93,7 @@
                             <div id='gas-mask-associated-enter' style='display: none;'>
                                 <div class="form-group">
                                     <label asp-for="UserEnteredGasMaskAssociatedWith" class="bold-label"></label>
-                                    <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control" />
+                                    <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control mobile-form-text" />
                                     <span asp-validation-for="UserEnteredGasMaskAssociatedWith" class="text-danger" id="val-for-gas-mask-associated-enter"></span>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
                         <!--display text box input if no gas masks are already in database to select from-->
                         <div class="form-group">
                             <label asp-for="UserEnteredGasMaskAssociatedWith" class="bold-label"></label>
-                            <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control" />
+                            <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredGasMaskAssociatedWith" class="text-danger"></span>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                         <div id='gas-mask-associated-enter' style='display: none;'>
                             <div class="form-group">
                                 <label asp-for="UserEnteredGasMaskAssociatedWith" class="bold-label"></label>
-                                <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control" />
+                                <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control mobile-form-text" />
                                 <span asp-validation-for="UserEnteredGasMaskAssociatedWith" class="text-danger" id="val-for-gas-mask-associated-enter"></span>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                         <!--display text box input if no gas masks are already in database to select from-->
                         <div class="form-group">
                             <label asp-for="UserEnteredGasMaskAssociatedWith" class="bold-label"></label>
-                            <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control" />
+                            <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredGasMaskAssociatedWith" class="text-danger"></span>
                         </div>
                     </div>
@@ -210,13 +210,13 @@
                 <div id="glove-fields" style="display: block;">
                     <div class="form-group">
                         <label asp-for="GloveQuantity" class="bold-label"></label>
-                        <input asp-for="GloveQuantity" class="form-control" />
+                        <input asp-for="GloveQuantity" class="form-control mobile-form-text" />
                         <span asp-validation-for="GloveQuantity" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
                         <label asp-for="GloveThickness" class="bold-label"></label>
-                        <input asp-for="GloveThickness" class="form-control" />
+                        <input asp-for="GloveThickness" class="form-control mobile-form-text" />
                         <span asp-validation-for="GloveThickness" class="text-danger"></span>
                     </div>
 
@@ -235,7 +235,7 @@
                     <div id='glove-enter-size' style='display: block;'>
                         <div class="form-group">
                             <label asp-for="UserEnteredGloveSize" class="bold-label"></label>
-                            <input asp-for="UserEnteredGloveSize" class="form-control" />
+                            <input asp-for="UserEnteredGloveSize" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredGloveSize" class="text-danger" id="val-for-glove-size-enter"></span>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                     <div id='glove-enter-size' style='display: none;'>
                         <div class="form-group">
                             <label asp-for="UserEnteredGloveSize" class="bold-label"></label>
-                            <input asp-for="UserEnteredGloveSize" class="form-control" />
+                            <input asp-for="UserEnteredGloveSize" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredGloveSize" class="text-danger" id="val-for-glove-size-enter"></span>
                         </div>
                     </div>
@@ -256,13 +256,13 @@
                 <div id="glove-fields" style="display: none;">
                     <div class="form-group">
                         <label asp-for="GloveQuantity" class="bold-label"></label>
-                        <input asp-for="GloveQuantity" class="form-control" />
+                        <input asp-for="GloveQuantity" class="form-control mobile-form-text" />
                         <span asp-validation-for="GloveQuantity" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
                         <label asp-for="GloveThickness" class="bold-label"></label>
-                        <input asp-for="GloveThickness" class="form-control" />
+                        <input asp-for="GloveThickness" class="form-control mobile-form-text" />
                         <span asp-validation-for="GloveThickness" class="text-danger"></span>
                     </div>
 
@@ -280,7 +280,7 @@
                 <div id='glove-enter-size' style='display: none;'>
                     <div class="form-group">
                         <label asp-for="UserEnteredGloveSize" class="bold-label"></label>
-                        <input asp-for="UserEnteredGloveSize" class="form-control" />
+                        <input asp-for="UserEnteredGloveSize" class="form-control mobile-form-text" />
                         <span asp-validation-for="UserEnteredGloveSize" class="text-danger" id="val-for-glove-size-enter"></span>
                     </div>
                 </div>
@@ -301,7 +301,7 @@
 
                     <div class="form-group">
                         <label asp-for="NumOunces" class="bold-label"></label>
-                        <input asp-for="NumOunces" class="form-control" />
+                        <input asp-for="NumOunces" class="form-control mobile-form-text" />
                         <span asp-validation-for="NumOunces" class="text-danger"></span>
                     </div>
                 </div>
@@ -320,7 +320,7 @@
 
                     <div class="form-group">
                         <label asp-for="NumOunces" class="bold-label"></label>
-                        <input asp-for="NumOunces" class="form-control" />
+                        <input asp-for="NumOunces" class="form-control mobile-form-text" />
                         <span asp-validation-for="NumOunces" class="text-danger"></span>
                     </div>
                 </div>
@@ -344,7 +344,7 @@
                     <div id='mask-enter-type' style='display: block;'>
                         <div class="form-group">
                             <label asp-for="UserEnteredMaskType" class="bold-label"></label>
-                            <input asp-for="UserEnteredMaskType" class="form-control" />
+                            <input asp-for="UserEnteredMaskType" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredMaskType" class="text-danger" id="val-for-mask-type-enter"></span>
                         </div>
                     </div>
@@ -354,7 +354,7 @@
                     <div id='mask-enter-type' style='display: none;'>
                         <div class="form-group">
                             <label asp-for="UserEnteredMaskType" class="bold-label"></label>
-                            <input asp-for="UserEnteredMaskType" class="form-control" />
+                            <input asp-for="UserEnteredMaskType" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredMaskType" class="text-danger" id="val-for-mask-type-enter"></span>
                         </div>
                     </div>
@@ -376,7 +376,7 @@
                 <div id="mask-enter-type" style="display: none;">
                     <div class="form-group">
                         <label asp-for="UserEnteredMaskType" class="bold-label"></label>
-                        <input asp-for="UserEnteredMaskType" class="form-control" />
+                        <input asp-for="UserEnteredMaskType" class="form-control mobile-form-text" />
                         <span asp-validation-for="UserEnteredMaskType" class="text-danger" id="val-for-mask-type-enter"></span>
                     </div>
                 </div>
@@ -387,7 +387,7 @@
                 <div id="wipe-fields" style="display: block;">
                     <div class="form-group">
                         <label asp-for="WipeQuantity" class="bold-label"></label>
-                        <input asp-for="WipeQuantity" class="form-control" />
+                        <input asp-for="WipeQuantity" class="form-control mobile-form-text" />
                         <span asp-validation-for="WipeQuantity" class="text-danger"></span>
                     </div>
                 </div>
@@ -397,7 +397,7 @@
                 <div id="wipe-fields" style="display: none;">
                     <div class="form-group">
                         <label asp-for="WipeQuantity" class="bold-label"></label>
-                        <input asp-for="WipeQuantity" class="form-control" />
+                        <input asp-for="WipeQuantity" class="form-control mobile-form-text" />
                         <span asp-validation-for="WipeQuantity" class="text-danger"></span>
                     </div>
                 </div>
