--- a/PPETracker/Views/Products/Edit.cshtml
+++ b/PPETracker/Views/Products/Edit.cshtml
@@ -17,13 +17,13 @@
 
             <div class="form-group">
                 <label asp-for="Name" class="bold-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control mobile-form-text" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
 
             <div class="form-group">
                 <label asp-for="Brand" class="bold-label"></label>
-                <input asp-for="Brand" class="form-control" />
+                <input asp-for="Brand" class="form-control mobile-form-text" />
                 <span asp-validation-for="Brand" class="text-danger"></span>
             </div>
 
@@ -51,7 +51,7 @@
 
             <div class="form-group">
                 <label asp-for="Comments" class="bold-label"></label>
-                <textarea asp-for="Comments" class="form-control"></textarea>
+                <textarea asp-for="Comments" class="form-control mobile-form-text"></textarea>
                 <span asp-validation-for="Comments" class="text-danger"></span>
             </div>
 
@@ -88,7 +88,7 @@
                          <div id='gas-mask-associated-enter'>
                            <div class="form-group">
                                 <label asp-for="UserEnteredGasMaskAssociatedWith" class="bold-label"></label>
-                                <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control" />
+                                <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control mobile-form-text" />
                                 <span asp-validation-for="UserEnteredGasMaskAssociatedWith" class="text-danger" id="val-for-gas-mask-associated-enter"></span>
                            </div>
                         </div>
@@ -98,7 +98,7 @@
                          <div id='gas-mask-associated-enter' style='display: none;'>
                            <div class="form-group">
                                 <label asp-for="UserEnteredGasMaskAssociatedWith" class="bold-label"></label>
-                                <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control" />
+                                <input asp-for="UserEnteredGasMaskAssociatedWith" class="form-control mobile-form-text" />
                                 <span asp-validation-for="UserEnteredGasMaskAssociatedWith" class="text-danger" id="val-for-gas-mask-associated-enter"></span>
                            </div>
                         </div>
@@ -127,13 +127,13 @@
                 <div id="glove-fields" style="display: block;">
                     <div class="form-group">
                         <label asp-for="GloveQuantity" class="bold-label"></label>
-                        <input asp-for="GloveQuantity" class="form-control" />
+                        <input asp-for="GloveQuantity" class="form-control mobile-form-text" />
                         <span asp-validation-for="GloveQuantity" class="text-danger"></span>
                     </div>
 
                     <div class="form-group">
                         <label asp-for="GloveThickness" class="bold-label"></label>
-                        <input asp-for="GloveThickness" class="form-control" />
+                        <input asp-for="GloveThickness" class="form-control mobile-form-text" />
                         <span asp-validation-for="GloveThickness" class="text-danger"></span>
                     </div>
 
@@ -152,7 +152,7 @@
                     <div id='glove-enter-size' style='display: block;'>
                         <div class="form-group">
                             <label asp-for="UserEnteredGloveSize" class="bold-label"></label>
-                            <input asp-for="UserEnteredGloveSize" class="form-control" />
+                            <input asp-for="UserEnteredGloveSize" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredGloveSize" class="text-danger" id="val-for-glove-size-enter"></span>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                     <div id='glove-enter-size' style='display: none;'>
                         <div class="form-group">
                             <label asp-for="UserEnteredGloveSize" class="bold-label"></label>
-                            <input asp-for="UserEnteredGloveSize" class="form-control" />
+                            <input asp-for="UserEnteredGloveSize" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredGloveSize" class="text-danger" id="val-for-glove-size-enter"></span>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
 
                     <div class="form-group">
                         <label asp-for="NumOunces" class="bold-label"></label>
-                        <input asp-for="NumOunces" class="form-control" />
+                        <input asp-for="NumOunces" class="form-control mobile-form-text" />
                         <span asp-validation-for="NumOunces" class="text-danger"></span>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
                     <div id='mask-enter-type' style='display: block;'>
                         <div class="form-group">
                             <label asp-for="UserEnteredMaskType" class="bold-label"></label>
-                            <input asp-for="UserEnteredMaskType" class="form-control" />
+                            <input asp-for="UserEnteredMaskType" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredMaskType" class="text-danger" id="val-for-mask-type-enter"></span>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                     <div id='mask-enter-type' style='display: none;'>
                         <div class="form-group">
                             <label asp-for="UserEnteredMaskType" class="bold-label"></label>
-                            <input asp-for="UserEnteredMaskType" class="form-control" />
+                            <input asp-for="UserEnteredMaskType" class="form-control mobile-form-text" />
                             <span asp-validation-for="UserEnteredMaskType" class="text-danger" id="val-for-mask-type-enter"></span>
                         </div>
                     </div>
@@ -229,7 +229,7 @@
                 <div id="wipe-fields" style="display: block;">
                     <div class="form-group">
                         <label asp-for="WipeQuantity" class="bold-label"></label>
-                        <input asp-for="WipeQuantity" class="form-control" />
+                        <input asp-for="WipeQuantity" class="form-control mobile-form-text" />
                         <span asp-validation-for="WipeQuantity" class="text-danger"></span>
                     </div>
                 </div>
