--- a/PPETracker/Views/Products/_ProductDelete.cshtml
+++ b/PPETracker/Views/Products/_ProductDelete.cshtml
@@ -23,7 +23,9 @@
                         @if (Model.PhotoLink != null)
                         {
                             <div class="col-sm-6">
-                                <img src="@Model.PhotoLink" style="width: 100%; max-height: 100%;" />
+                                <div class="text-center">
+                                    <img src="@Model.PhotoLink" class="img-responsive" />
+                                </div>
                             </div>
                         }
                         else
